--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
 }
 
 .grid-container > div {
